add tool runs controller
